--- a/src/main/webapp/WEB-INF/views/layout/topbar.vm
+++ b/src/main/webapp/WEB-INF/views/layout/topbar.vm
@@ -16,7 +16,7 @@
                     <span>管理员</span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">我的应用</a></li>
+                    <li><a href="#">个人信息</a></li>
                     <li class="divider"></li>
                     <li>
                         <a href="#">退出</a>
