--- a/src/main/webapp/WEB-INF/views/templates/login.vm
+++ b/src/main/webapp/WEB-INF/views/templates/login.vm
@@ -6,13 +6,37 @@
       <h1 class="logo-name"><img src="/assets/img/logo.svg"></h1>
     </div>
     <form class="m-t" role="form" action="/login">
+      <input type="hidden" name="csrfToken" value="$csrfTool.getToken($request)"/>
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="用户名" name="userIdentity" required="required">
+        <input type="text" class="form-control" placeholder="用户名" name="userIdentity"
+               required="required">
       </div>
       <div class="form-group">
-        <input type="password" class="form-control" placeholder="密码" name="userPassword" required="required">
+        <input type="password" class="form-control" placeholder="密码" name="userPassword"
+               required="required">
       </div>
       <button type="submit" class="btn btn-primary block full-width m-b">登录</button>
     </form>
   </div>
 </div>
+<script type="text/javascript">
+  $(document).ready(function () {
+    $("form").on('submit', function(event) {
+      event.preventDefault();
+      // 请求登录
+      $.ajax({
+        url: '/login',
+        type: 'POST',
+        dataType: 'json',
+        data: $(this).serialize(),
+        success: function (json) {
+          if (json && json.success) {
+            location.href = "/index";
+          } else {
+            json ? swal(json['msg'], "", "error") : {};
+          }
+        }
+      });
+    });
+  });
+</script>
