--- a/src/main/webapp/WEB-INF/views/layout/head.vm
+++ b/src/main/webapp/WEB-INF/views/layout/head.vm
@@ -4,7 +4,7 @@
 
 <title>API 管理后台$!pageTitle</title>
 
-<link rel="shortcut icon" href="assets/favicon.ico">
+<link rel="shortcut icon" href="/assets/favicon.ico">
 
 <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
 <link href="/assets/font-awesome/css/font-awesome.css" rel="stylesheet">
