--- a/src/main/webapp/WEB-INF/views/layout/menu.vm
+++ b/src/main/webapp/WEB-INF/views/layout/menu.vm
@@ -10,39 +10,12 @@
             <li>
                 <a href="index.htm">
                     <i class="fa fa-th"></i> <span class="nav-label">首页</span>
-                    <span class="label label-info pull-right">推荐</span></a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-server"></i> <span class="nav-label">节点管理</span><span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-server"></i> <span class="nav-label">用户信息</span><span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level collapse">
-                    <li><a href="node-manager.htm">节点管理</a></li>
-                    <li><a href="node-group-manager.htm">节点组管理</a></li>
-                    <li><a href="node-jvm-info.htm">节点JVM信息</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-random"></i> <span class="nav-label">任务队列管理</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse">
-                    <li><a href="job-add.htm">任务添加</a></li>
-                    <li><a href="cron-job-queue.htm">Cron任务</a></li>
-                    <li><a href="executing-job-queue.htm">执行中的任务</a></li>
-                    <li><a href="executable-job-queue.htm">等待执行的任务</a></li>
-                    <li><a href="load-job.htm">手动加载任务</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-file-text-o"></i> <span class="nav-label">日志</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse">
-                    <li><a href="job-logger.htm">任务日志</a></li>
-                    <li><a href="node-onoffline-log.htm">节点上下线日志</a></li>
-                </ul>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-bar-chart"></i> <span class="nav-label">监控报警</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse">
-                    <li><a href="jobtracker-monitor.htm">JobTracker监控</a></li>
-                    <li><a href="tasktracker-monitor.htm">TaskTracker监控</a></li>
-                    <li><a href="h2" target="_blank">H2-Console</a></li>
+                    <li><a href="/user/keyList.htm">密钥列表</a></li>
+                    <li><a href="node-group-manager.htm">申请密钥</a></li>
                 </ul>
             </li>
         </ul>
