--- a/src/main/webapp/WEB-INF/views/layout/layout.vm
+++ b/src/main/webapp/WEB-INF/views/layout/layout.vm
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    #parse('/layout/head.vm')
+  #parse('/layout/head.vm')
 </head>
 
 <body class="pace-done">
 <div id="wrapper">
-    #parse('/layout/menu.vm')
+  #parse('/layout/menu.vm')
   <div id="page-wrapper" class="gray-bg" style="min-height: 761px;">
-      #parse('/layout/topbar.vm')
-
-      $screen_content
+    #parse('/layout/topbar.vm')
+    #parse('/layout/errorMessage.vm')
+    $screen_content
   </div>
 </div>
-    #parse('/layout/footer.vm')
+  #parse('/layout/footer.vm')
 </body>
 </html>
