--- a/src/main/webapp/assets/styles/style.css
+++ b/src/main/webapp/assets/styles/style.css
@@ -1443,7 +1443,7 @@ h3,
   padding: 0;
   width: 22px;
   height: 22px;
-  background: url("img/green.png") no-repeat;
+  background: url("../images/green.png") no-repeat;
   border: none;
   cursor: pointer;
 }
@@ -1483,7 +1483,7 @@ h3,
 @media (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {
   .icheckbox_square-green,
   .iradio_square-green {
-    background-image: url("img/green@2x.png");
+    background-image: url("../images/green@2x.png");
     -webkit-background-size: 240px 24px;
     background-size: 240px 24px;
   }
