--- a/src/main/java/velocity_implicit.vm
+++ b/src/main/java/velocity_implicit.vm
@@ -6,9 +6,16 @@
 #* Define global variables *#
 #* @vtlvariable name="pageTitle" type="java.lang.String" *#
 #* @vtlvariable name="pageStyles" type="java.util.List<java.lang.String>" *#
-#* @vtlvariable name="pageScripts" type="java.util.List<java.lang.String>" *#
 #* @vtlvariable name="rc" type="org.springframework.web.servlet.support.RequestContext" *#
+#* @vtlvariable name="csrfTool" type="com.blueocn.api.support.csrf.CSRFTool" *#
+#* @vtlvariable name="request" type="javax.servlet.http.HttpServletRequest" *#
+#* @vtlvariable name="loginUser" type="com.blueocn.api.vo.UserVo" *#
 
 #* File specificed variables *#
 #* @vtlvariable name="screen_content" type="java.lang.Object" file="../webapp/WEB-INF/views/layout/layout.vm" *#
 #* @vtlvariable name="screen_content" type="java.lang.Object" file="../webapp/WEB-INF/views/layout/page.vm" *#
+#* @vtlvariable name="errorMessage" type="java.lang.String" file="../webapp/WEB-INF/views/fragment/message/error.vm" *#
+#* @vtlvariable name="infoMessage" type="java.lang.String" file="../webapp/WEB-INF/views/fragment/message/information.vm" *#
+#* @vtlvariable name="warnMessage" type="java.lang.String" file="../webapp/WEB-INF/views/fragment/message/warning.vm" *#
+#* @vtlvariable name="successMessage" type="java.lang.String" file="../webapp/WEB-INF/views/fragment/message/success.vm" *#
+#* @vtlvariable name="message" type="com.blueocn.api.vo.MessageVo" file="../webapp/WEB-INF/views/fragment/message.vm" *#
