--- a/src/main/webapp/WEB-INF/views/layout/layout.vm
+++ b/src/main/webapp/WEB-INF/views/layout/layout.vm
@@ -13,7 +13,7 @@
     ${screen_content}
     <!-- Footer-->
     <footer class="footer">
-      <span class="pull-right">Based On <a href="http://github.com/Mashape/kong" target="_blank">Kong</a></span>
+      <span class="pull-right">Based on <a href="http://github.com/Mashape/kong" target="_blank">kong</a></span>
       Copyright © 2008-2016 北京蓝海讯通科技股份有限公司
     </footer>
   </div>
