--- a/src/main/webapp/WEB-INF/views/templates/index.vm
+++ b/src/main/webapp/WEB-INF/views/templates/index.vm
@@ -1,1 +1,10 @@
-<h2>首页还没规划好，可以访问其他页面，也可以提建议，首页应该放什么东西，敬请期待......</h2>
+#set($successMessage = "dsdsdsdsds")
+
+<div class="content animate-panel">
+  <div class="row">
+    <div class="col-lg-12 text-center m-t-md">
+      <h2>欢迎使用 API 管理平台</h2>
+      <p>首页还没规划好，可以访问其他页面，也可以提建议，首页应该放什么东西，敬请期待......</p>
+    </div>
+  </div>
+</div>
