GATE-2 API 编辑页面

--- a/src/main/java/velocity_implicit.vm
+++ b/src/main/java/velocity_implicit.vm
@@ -10,12 +10,13 @@
 #* @vtlvariable name="csrfTool" type="com.blueocn.api.support.csrf.CSRFTool" *#
 #* @vtlvariable name="request" type="javax.servlet.http.HttpServletRequest" *#
 #* @vtlvariable name="loginUser" type="com.blueocn.api.vo.UserVo" *#
+#* @vtlvariable name="parentMenu" type="java.lang.String" *#
+#* @vtlvariable name="menuName" type="java.lang.String" *#
 
 #* File specificed variables *#
 #* @vtlvariable name="screen_content" type="java.lang.Object" file="../webapp/WEB-INF/views/layout/layout.vm" *#
 #* @vtlvariable name="screen_content" type="java.lang.Object" file="../webapp/WEB-INF/views/layout/page.vm" *#
-#* @vtlvariable name="errorMessage" type="java.lang.String" file="../webapp/WEB-INF/views/fragment/message/error.vm" *#
-#* @vtlvariable name="infoMessage" type="java.lang.String" file="../webapp/WEB-INF/views/fragment/message/information.vm" *#
-#* @vtlvariable name="warnMessage" type="java.lang.String" file="../webapp/WEB-INF/views/fragment/message/warning.vm" *#
-#* @vtlvariable name="successMessage" type="java.lang.String" file="../webapp/WEB-INF/views/fragment/message/success.vm" *#
 #* @vtlvariable name="message" type="com.blueocn.api.vo.MessageVo" file="../webapp/WEB-INF/views/fragment/message.vm" *#
+#* @vtlvariable name="api" type="com.blueocn.api.kong.model.Api" file="../webapp/WEB-INF/views/templates/api/edit.vm" *#
+
+#* Define macros *#
