--- a/src/main/webapp/WEB-INF/views/templates/user/login.vm
+++ b/src/main/webapp/WEB-INF/views/templates/user/login.vm
@@ -36,7 +36,7 @@
   </div>
   <div class="row">
     <div class="col-md-12 text-center">
-      Copyright © 2008-2016 北京蓝海讯通科技股份有限公司
+      Copyright © 2008-2016 OneAPM
     </div>
   </div>
 </div>
