--- a/src/main/webapp/WEB-INF/views/fragment/menu.vm
+++ b/src/main/webapp/WEB-INF/views/fragment/menu.vm
@@ -17,12 +17,16 @@
     </div>
     <ul class="nav" id="side-menu">
       <!-- Project Menu -->
-      <li class="active">
-        <a href="${rc.contextPath}/index"> <span class="nav-label">首页</span> <span
-            class="label label-success pull-right">start</span> </a>
+      <li #activeMenu("index" $parentMenu)>
+        <a href="${rc.contextPath}/index"> <span class="nav-label">首页</span><span
+            class="label label-success pull-right">start</span></a>
       </li>
-      <li>
-        <a href="page2.html"> <span class="nav-label">Page 2</span> </a>
+      <li #activeMenu("api" $parentMenu)>
+        <a href="#"><span class="nav-label">API 管理</span><span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level">
+          <li #activeMenu("addApi" $menuName)><a href="${rc.contextPath}/api/add">添加 API</a></li>
+          <li #activeMenu("listApi" $menuName)><a href="${rc.contextPath}/api/list">检索 API</a></li>
+        </ul>
       </li>
     </ul>
   </div>
