--- a/src/main/webapp/WEB-INF/views/layout/layout.vm
+++ b/src/main/webapp/WEB-INF/views/layout/layout.vm
@@ -14,7 +14,7 @@
     <!-- Footer-->
     <footer class="footer">
       <span class="pull-right">Based on <a href="http://github.com/Mashape/kong" target="_blank">kong</a></span>
-      Copyright © 2008-2016 北京蓝海讯通科技股份有限公司
+      Copyright © 2008-2016 OneAPM
     </footer>
   </div>
 
