GATE-2 API 编辑页面错误异常处理展示

--- a/src/main/webapp/WEB-INF/views/macros/macros.vm
+++ b/src/main/webapp/WEB-INF/views/macros/macros.vm
@@ -42,3 +42,10 @@
   </div>
 </div>
 #end
+
+#*
+* CSRF Tag
+ *#
+#macro( csrfTag )
+<input type="hidden" name="csrfToken" value="$csrfTool.getToken($request)"/>
+#end
