--- a/src/main/webapp/WEB-INF/views/templates/api/edit.vm
+++ b/src/main/webapp/WEB-INF/views/templates/api/edit.vm
@@ -1,5 +1,6 @@
 #set( $pageStyles = [
-  "/assets/vendor/ladda/ladda-themeless.min.css"
+  "/assets/vendor/ladda/ladda-themeless.min.css",
+  "/assets/vendor/sweetalert/sweet-alert.css"
 ] )
 
 #if( $api )
@@ -54,33 +55,39 @@
           API 信息
         </div>
         <div class="panel-body">
-          <form method="get" class="form-horizontal">
+          <form method="get" class="form-horizontal api-form" action="${rc.contextPath}/api/save">
+            #csrfTag()
+            <input type="hidden" name="id" value="$!{api.id}">
             <div class="form-group"><label class="col-sm-3 control-label">Name</label>
-              <div class="col-sm-9"><input type="text" class="form-control"></div>
+              <div class="col-sm-9"><input type="text" name="name" class="form-control" value="$!{api.name}">
+                <span class="help-block m-b-none data-name"></span>
+              </div>
             </div>
             <div class="hr-line-dashed"></div>
             <div class="form-group"><label class="col-sm-3 control-label">Request Host</label>
-              <div class="col-sm-9"><input type="text" class="form-control"> <span
-                  class="help-block m-b-none">At least a 'request_host' or a 'request_path' must be specified</span>
+              <div class="col-sm-9"><input type="text" name="requestHost" class="form-control" value="$!{api.requestHost}">
+                <span class="help-block m-b-none data-request_host"></span>
               </div>
             </div>
             <div class="hr-line-dashed"></div>
             <div class="form-group"><label class="col-sm-3 control-label">Request Path</label>
-              <div class="col-sm-9"><input type="text" class="form-control"></div>
+              <div class="col-sm-9"><input type="text" name="requestPath" class="form-control" value="$!{api.requestPath}">
+                <span class="help-block m-b-none data-request_path"></span>
+              </div>
             </div>
             <div class="hr-line-dashed"></div>
             <div class="form-group"><label class="col-sm-3 control-label">Upstream Url</label>
-              <div class="col-sm-9"><input type="text" class="form-control"> <span
-                  class="help-block m-b-none">upstream_url is required</span></div>
+              <div class="col-sm-9"><input type="text" name="upstreamUrl" class="form-control" value="$!{api.upstreamUrl}">
+                <span class="help-block m-b-none data-upstream_url"></span></div>
             </div>
             <div class="hr-line-dashed"></div>
             <div class="form-group">
               <label class="col-sm-3 control-label">Other Option</label>
               <div class="col-sm-9"><label class="checkbox-inline">
                 <input id="strip_request_path" class="i-checks" type="checkbox"
-                       name="strip_request_path"> Strip request path</label>
+                       name="stripRequestPath" #if ( $api.stripRequestPath ) checked #end> Strip request path</label>
                 <label class="checkbox-inline">
-                  <input id="preserve_host" class="i-checks" type="checkbox" name="preserve_host">
+                  <input id="preserveHost" class="i-checks" type="checkbox" name="preserve_host" #if ( $api.preserveHost ) checked #end>
                   Preserve host
                 </label>
               </div>
@@ -88,13 +95,11 @@
             <div class="hr-line-dashed"></div>
             <div class="form-group">
               <div class="col-sm-8 col-sm-offset-2">
-                <button class="ladda-button btn btn-success" type="button"
-                        data-style="expand-right"><span
-                    class="ladda-label"><i class="fa fa-check"></i> 保存</span><span
-                    class="ladda-spinner"></span></button>
-                <button class="btn btn-default" type="button" onclick="history.go(-1)"><i
-                    class="fa fa-times"></i> 取消
-                </button>
+                <button class="ladda-button btn btn-success" type="submit" data-style="expand-right">
+                  <span class="ladda-label"><i class="fa fa-check"></i> 保存</span>
+                  <span class="ladda-spinner"></span></button>
+                <button class="btn btn-default" type="button" onclick="history.go(-1)">
+                  <i class="fa fa-times"></i> 取消</button>
               </div>
             </div>
           </form>
@@ -107,6 +112,7 @@
 <script src="${rc.contextPath}/assets/vendor/ladda/spin.min.js"></script>
 <script src="${rc.contextPath}/assets/vendor/ladda/ladda.min.js"></script>
 <script src="${rc.contextPath}/assets/vendor/ladda/ladda.jquery.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/sweetalert/sweet-alert.min.js"></script>
 <script type="text/javascript">
   Ladda.bind('.ladda-button', {
     callback: function (instance) {
@@ -122,5 +128,40 @@
       }, 200);
     }
   });
-  ## TODO 保存动作
+
+  function showErrorMessage(error) {
+    for (var key in error) {
+      $(".data-" + key).html(error[key]);
+    }
+  }
+
+  // Save method
+  $(document).ready(function() {
+    $("form.api-form").on("submit", function(e) {
+      e.preventDefault();
+      $.ajax($(this).attr("action"), {
+        data: $(this).serialize(),
+        method: "post",
+        success: function(data) {
+          if (data["success"]) {
+            swal({
+              title: "保存成功 !",
+              type: "success"
+            },function() {
+              location.href = "${rc.contextPath}/api/list";
+            });
+          } else {
+            console.log(data["msg"]);
+            var error = JSON.parse(data["msg"]);
+            showErrorMessage(error);
+            swal({
+              title: "保存失败 !",
+              text: "请检查页面重新输入 !",
+              type: "warning"
+            });
+          }
+        }
+      });
+    });
+  });
 </script>
