--- a/src/main/webapp/WEB-INF/views/templates/api/list.vm
+++ b/src/main/webapp/WEB-INF/views/templates/api/list.vm
@@ -64,7 +64,7 @@
           <!-- Data Area -->
         </div>
         <div class="panel-body">
-          <table id="apiList" class="table table-striped table-bordered table-hover" style="min-width: 100%">
+          <table id="apiList" class="table table-striped table-bordered table-hover" width="100%">
             <thead>
             <tr>
               <th>Name</th>
@@ -73,6 +73,7 @@
               <th>Upstream Url</th>
               <th>Preserve Host</th>
               <th>Strip Request Path</th>
+              <th>Operation</th>
             </tr>
             </thead>
           </table>
@@ -124,8 +125,15 @@
           { data : "requestPath"},
           { data : "upstreamUrl"},
           { data : "preserveHost"},
-          { data : "stripRequestPath"}
-        ]
+          { data : "stripRequestPath"},
+          { data : "id"}
+        ],
+        "columnDefs": [{
+          "render": function (data, type, row) {
+            return "<a href='$!{rc.contextPath}/api/edit/" + data + "'>编辑</a>" + "、<a onclick='deleteApi(\"" + data + "\")'>删除</a>";
+          },
+          targets: 6
+        }]
       });
     };
 
@@ -135,6 +143,33 @@
       }
     };
   }();
+
+  function deleteApi(apiId) {
+    console.log(apiId);
+    swal({
+      title: "是否删除该 API ?",
+      type: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#DD6B55",
+      confirmButtonText: "删除",
+      cancelButtonText: "取消",
+      closeOnConfirm: false,
+      closeOnCancel: false
+    }, function(confirm) {
+      if (confirm) {
+        $.ajax("$!{rc.contextPath}/api/delete/" + apiId, {
+          complete: function() {
+            swal({
+              title: "删除成功 !",
+              type: "success"
+            }, function() {
+              location.reload();
+            });
+          }
+        });
+      }
+    });
+  }
 
   $(document).ready(function() {
     var setting = {
