--- a/src/main/webapp/WEB-INF/views/fragment/menu.vm
+++ b/src/main/webapp/WEB-INF/views/fragment/menu.vm
@@ -10,7 +10,7 @@
           </a>
           <ul class="dropdown-menu animated flipInX m-t-xs">
             <li><a href="#">修改密码</a></li> ## TODO 修改密码
-            <li><a href="${rc.contextPath}/user/logout">注销</a></li>
+            <li><a href="${rc.contextPath}/admin/user/logout">注销</a></li>
           </ul>
         </div>
       </div>
@@ -32,7 +32,7 @@
         <a href="#"><span class="nav-label">开发者管理</span><span class="fa arrow"></span></a>
         <ul class="nav nav-second-level">
           <li #activeMenu("addConsumer" $menuName)><a href="${rc.contextPath}/admin/consumer/add">开发者申请</a></li>
-          <li #activeMenu("listConsumer" $menuName)><a href="${rc.contextPath}/admin/consumer/list">开发者管理</a></li>
+          <li #activeMenu("listConsumer" $menuName)><a href="${rc.contextPath}/admin/consumer/list">开发者列表</a></li>
         </ul>
       </li>
     </ul>
