--- a/src/main/webapp/WEB-INF/views/templates/admin/consumer/list.vm
+++ b/src/main/webapp/WEB-INF/views/templates/admin/consumer/list.vm
@@ -1,3 +1,172 @@
 #set( $pageTitle = "开发者管理" )
 #set( $parentMenu = "consumer" )
 #set( $menuName = "listConsumer" )
+
+#set( $pageStyles = [
+  "/assets/vendor/datatables/css/dataTables.bootstrap.min.css",
+  "/assets/vendor/sweetalert/sweet-alert.css"
+])
+
+#breadCrumb( "开发者管理", "开发者列表, 可以查询, 编辑, 删除")
+
+<div class="content animate-panel">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="hpanel">
+        <div class="panel-heading hbuilt">
+          <div class="panel-tools">
+            <a class="showhide"><i class="fa fa-chevron-up"></i></a>
+            <a class="closebox"><i class="fa fa-times"></i></a>
+          </div>
+          开发者信息
+        </div>
+        <div class="panel-body">
+          <!-- Search Area -->
+          <div class="row">
+            <form id="consumerForm" action="${rc.contextPath}/admin/consumer/list" class="form" method="post">
+              <div class="form-group col-sm-6">
+                <label class="col-sm-3 control-label">Username</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" name="username" value=""/>
+                </div>
+                <div class="hr-line-dashed"></div>
+              </div>
+              <div class="form-group col-sm-6">
+                <label class="col-sm-3 control-label">Consumer Id</label>
+                <div class="col-sm-9">
+                  <input type="text" class="form-control" name="customId" value=""/>
+                </div>
+                <div class="hr-line-dashed"></div>
+              </div>
+              <div class="hr-line-dashed"></div>
+              <div class="form-group">
+                <div class="col-sm-8 col-sm-offset-4">
+                  <button class="btn btn-success queryConsumer" type="button"><i class="fa fa-check"></i>
+                    查询</span></button>
+                  <button class="btn btn-default reset" type="button"><i class="fa fa-times"></i> 重置
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <!-- Data Area -->
+        </div>
+        <div class="panel-body">
+          <table id="consumerList" class="table table-striped table-bordered table-hover" width="100%">
+            <thead>
+            <tr>
+              <th>Username</th>
+              <th>Consumer Id</th>
+              <th>Create At</th>
+              <th>Operation</th>
+            </tr>
+            </thead>
+          </table>
+        </div>
+        <div class="panel-footer">
+          &nbsp;
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="${rc.contextPath}/assets/vendor/sweetalert/sweet-alert.min.js"></script>
+<!-- Datatable Vendor -->
+<script src="${rc.contextPath}/assets/vendor/datatables/js/jquery.dataTables.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/datatables/js/dataTables.bootstrap.min.js"></script>
+<script type="text/javascript">
+  var TableHelper = function () {
+    var loading = function (setting) {
+      console.log($("#" + setting["formId"]).serialize().replace(/[^&]+=\.?(?:&|$)/g, ''));
+      var form = $("#" + setting["formId"]);
+      $.ajax($("#" + setting["formId"]).attr("action"), {
+        data: $("#" + setting["formId"]).serialize().replace(/[^&]+=\.?(?:&|$)/g, ''),
+        method: "post",
+        success: function (data) {
+          setting["data"] = data["data"];
+          console.log(data);
+          tableRender(setting);
+        },
+        error: function () {
+          swal({
+            title: "加载失败 !",
+            text: "请检查页面重新提交 !",
+            type: "warning"
+          });
+        }
+      });
+    };
+
+    var tableRender = function (setting) {
+      setting["dataTable"].destroy();
+      $("#" + setting["tableId"]).html(setting["tableHeader"]);
+      setting["dataTable"] = $("#" + setting["tableId"]).DataTable({
+        fixedHeader: true,
+        data: setting["data"],
+        columns: [
+          {data: "username"},
+          {data: "customId"},
+          {data: "createdAt"},
+          {data: "id"}
+        ],
+        "columnDefs": [{
+          "render": function (data, type, row) {
+            return "<a href='$!{rc.contextPath}/admin/consumer/edit/" + data + "'>编辑</a>" + "、<a onclick='deleteConsumer(\"" + data + "\")'>删除</a>";
+          },
+          targets: 3
+        }]
+      });
+    };
+
+    return {
+      init: function (setting) {
+        loading(setting);
+      }
+    };
+  }();
+
+  function deleteConsumer(id) {
+    console.log(id);
+    swal({
+      title: "是否删除该开发者 ?",
+      type: "warning",
+      showCancelButton: true,
+      confirmButtonColor: "#DD6B55",
+      confirmButtonText: "删除",
+      cancelButtonText: "取消",
+      closeOnConfirm: false,
+      closeOnCancel: true
+    }, function (confirm) {
+      if (confirm) {
+        $.ajax("$!{rc.contextPath}/admin/consumer/delete/" + id, {
+          complete: function () {
+            swal({
+              title: "删除成功 !",
+              type: "success"
+            }, function () {
+              location.reload();
+            });
+          }
+        });
+      }
+    });
+  }
+
+  $(document).ready(function () {
+    var setting = {
+      formId: "consumerForm",
+      tableId: "consumerList",
+      dataTable: $("#consumerList").DataTable(),
+      tableHeader: $("#consumerList").html()
+    };
+    TableHelper.init(setting);
+    $("button.queryConsumer").on("click", function () {
+      console.log("Reload Consumer");
+      TableHelper.init(setting);
+    });
+    $(".reset").on("click", function () {
+      location.reload();
+    });
+  });
+</script>
