--- a/src/main/webapp/WEB-INF/views/fragment/menu.vm
+++ b/src/main/webapp/WEB-INF/views/fragment/menu.vm
@@ -35,6 +35,13 @@
           <li #activeMenu("listConsumer" $menuName)><a href="${rc.contextPath}/admin/consumer/list">开发者列表</a></li>
         </ul>
       </li>
+      <li #activeMenu("plugin" $parentMenu)>
+        <a href="#"><span class="nav-label">插件管理</span><span class="fa arrow"></span></a>
+        <ul class="nav nav-second-level">
+          <li #activeMenu("selectApi" $menuName)><a href="${rc.contextPath}/admin/plugin/select">新增插件</a></li>
+          <li #activeMenu("listPlugin" $menuName)><a href="${rc.contextPath}/admin/plugin/list">检索插件</a></li>
+        </ul>
+      </li>
     </ul>
   </div>
 </aside>
