--- a/src/main/webapp/WEB-INF/views/templates/admin/plugin/select.vm
+++ b/src/main/webapp/WEB-INF/views/templates/admin/plugin/select.vm
@@ -2,5 +2,105 @@
 #set( $parentMenu = "plugin" )
 #set( $menuName = "selectApi" )
 
+#set( $pageStyles = [
+  "/assets/vendor/select2/select2.css",
+  "/assets/vendor/select2/select2-bootstrap.css",
+  "/assets/vendor/sweetalert/sweet-alert.css"
+])
+
 #breadCrumb( "插件管理", "选择你想编辑的 API, 和对应的你想添加的插件.")
 
+<div class="content animate-panel">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="hpanel">
+        <div class="panel-heading hbuilt">
+          <div class="panel-tools">
+            <a class="showhide"><i class="fa fa-chevron-up"></i></a>
+            <a class="closebox"><i class="fa fa-times"></i></a>
+          </div>
+          API 与 插件选择
+        </div>
+        <div class="panel-body">
+          <!-- Select Area -->
+          <div class="row">
+            <form action="${rc.contextPath}" id="selectForm" class="form-horizontal">
+              <div class="form-group">
+                <label class="col-sm-3 control-label">API 列表</label>
+                <div class="col-sm-4">
+                  #if( ${apiList} )
+                  <select class="apiSelect form-control" name="apiSelect">
+                    <option></option>
+                    #foreach( ${api} in ${apiList} )
+                    <option value="$!{api.id}">$!{api.name}</option>
+                    #end
+                  </select>
+                  #else
+                  找不到 API 信息, 请刷新页面重试, 或者添加 API.
+                  #end
+                </div>
+              </div>
+              <div class="hr-line-dashed"></div>
+              <div class="form-group plugin-group">
+                <label class="col-sm-3 control-label">可添加的插件列表</label>
+                <div class="col-sm-4">
+                  #if( ${pluginList} )
+                  <select class="pluginSelect form-control" name="pluginSelect">
+                    <option></option>
+                    #foreach( ${plugin} in ${pluginList} )
+                    <option value="$!{plugin}">$!{plugin}</option>
+                    #end
+                  </select>
+                  #else
+                  找不到 Kong 上启用的插件信息, 请刷新页面重试, 或者修改配置文件.
+                  #end
+                </div>
+              </div>
+              <div class="hr-line-dashed"></div>
+              <div class="form-group">
+                <div class="col-sm-8 col-sm-offset-3">
+                  <button class="btn btn-success save" type="button">
+                    <i class="fa fa-check"></i> 保存
+                  </button>
+                  <button class="btn btn-default" type="button" onclick="history.go(-1)">
+                    <i class="fa fa-times"></i> 取消
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="panel-footer">
+          &nbsp;
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="${rc.contextPath}/assets/vendor/select2/select2.min.js"></script>
+<script src="${rc.contextPath}/assets/vendor/select2/select2_locale_zh-CN.js"></script>
+<script src="${rc.contextPath}/assets/vendor/sweetalert/sweet-alert.min.js"></script>
+
+<script type="text/javascript">
+  // Main Function
+  $(document).ready(function() {
+    $(".apiSelect").select2({
+      placeholder: "请选择你想操作的 API",
+      allowClear: true
+    });
+    $(".pluginSelect").select2({
+      placeholder: "请选择你想添加的插件",
+      allowClear: true
+    });
+    $("button.save").click(function() {
+      var api = $(".apiSelect").select2("val");
+      var plugin = $(".pluginSelect").select2("val");
+      if (api == "" || plugin == "") {
+        swal({title: "请选择API和插件 !", type: "warning"});
+      } else {
+        location.href = "$!{rc.contextPath}/admin/api/" + api + "/plugin/" + plugin;
+      }
+    });
+  });
+</script>
