--- a/src/main/java/velocity_implicit.vm
+++ b/src/main/java/velocity_implicit.vm
@@ -20,5 +20,7 @@
 #* @vtlvariable name="consumer" type="com.blueocn.api.kong.model.Consumer" file="../webapp/WEB-INF/views/templates/admin/consumer/edit.vm" *#
 #* @vtlvariable name="apiList" type="java.util.List<com.blueocn.api.kong.model.Api>" file="../webapp/WEB-INF/views/templates/admin/plugin/select.vm" *#
 #* @vtlvariable name="pluginList" type="java.util.List<java.lang.String>" file="../webapp/WEB-INF/views/templates/admin/plugin/select.vm" *#
+#* @vtlvariable name="apiId" type="java.lang.String" file="../webapp/WEB-INF/views/templates/admin/plugin/oauth2.vm" *#
+#* @vtlvariable name="oAuth2" type="com.blueocn.api.kong.model.Plugin<com.blueocn.api.kong.model.configs.OAuth2Config>" file="../webapp/WEB-INF/views/templates/admin/plugin/oauth2.vm" *#
 
 #* Define macros *#
